@@ -42,7 +42,7 @@ public class ThaumicEnergistics
 	/**
 	 * Current version of the mod.
 	 */
-	public static final String VERSION = "0.9.1.2"; // Note: don't forget to change the build.gradle file as well
+	public static final String VERSION = "0.10.0.0"; // Note: don't forget to change the build.gradle file as well
 
 	/**
 	 * Singleton instance
